--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "pinia": "^2.2.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5"
