--- a/package.json
+++ b/package.json
@@ -17,13 +17,8 @@
     "vuetify": "^3.7.2"
   },
   "devDependencies": {
-    "@catppuccin/tailwindcss": "^0.1.6",
-    "@iconify-json/material-symbols": "^1.2.1",
-    "@iconify/tailwind": "^1.1.3",
     "@vitejs/plugin-vue": "^5.0.5",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "material-design-icons-iconfont": "^6.7.0",
     "vite": "^5.3.1"
   }
 }
