--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.3.2",
-    "chart.js": "^4.4.4",
-    "pinia": "^2.2.2",
+    "@vercel/analytics": "^1.4.0",
+    "chart.js": "^4.4.6",
+    "pinia": "^2.2.6",
     "vite-plugin-vuetify": "^2.0.4",
-    "vue": "^3.4.29",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.7.2"
+    "vuetify": "^3.7.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "material-design-icons-iconfont": "^6.7.0",
-    "vite": "^5.3.1"
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "vite": "^5.4.11"
   },
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
