--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.0",
+    "@vercel/speed-insights": "^1.1.0",
     "chart.js": "^4.4.6",
     "pinia": "^2.2.6",
     "vite-plugin-vuetify": "^2.0.4",
@@ -18,7 +19,7 @@
     "vuetify": "^3.7.4"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-free": "^6.7.0",
     "@vitejs/plugin-vue": "^5.2.0",
     "vite": "^5.4.11"
   },
