--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@vercel/speed-insights": "^1.1.0",
     "chart.js": "^4.4.6",
     "pinia": "^2.2.6",
-    "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5",
-    "vuetify": "^3.7.4"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@iconify-json/octicon": "^1.2.1",
+    "@iconify/tailwind": "^1.1.3",
+    "@tailwindcss/typography": "^0.5.15",
     "@vitejs/plugin-vue": "^5.2.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "vite": "^5.4.11"
   },
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
